Criando tela de login - Projeto NoFood

--- a/NoFood/NoFood.Ionic/src/pages/login/login.scss
+++ b/NoFood/NoFood.Ionic/src/pages/login/login.scss
@@ -4,16 +4,14 @@ page-login {
         background-size: cover;
     }
 
-    .red {
-        background: rgba(189, 8, 28, 0.6);
-        height: 100%;
-        padding: 20px;
-        padding-top: 30%;
+    .scroll-content {
+        background: rgba(189, 8, 28, 0.6);    
     }
 
     .logo {
         width: 100%;
         text-align: center;
+        margin-top: 20%;
     }
 
     .logo span {
