--- a/NoFood/NoFood.Ionic/src/pages/categoria/categoria.scss
+++ b/NoFood/NoFood.Ionic/src/pages/categoria/categoria.scss
@@ -1,3 +1,50 @@
 page-categoria {
+    .blur {
+        background: url('/assets/imagens/fundo.jpg');
+        background-size: cover;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: -1;
+        filter: blur(3px);
+    }
 
+    .admin {
+        text-align: right;
+    }
+
+    .categoria {
+        width: 50%;
+        float: left;
+        text-align: center;
+        font-size: 1.6rem;
+        font-weight: bold;
+        color: white;
+    }
+
+    .categoria p {
+        text-shadow: 2px 2px 2px #000;
+    }
+
+    .categoria .image {
+        width: 120px;
+        height: 120px;
+        border: 2px solid white;
+        border-radius: 50%;
+        margin: 0 auto;
+        background-size: cover;
+    }
+
+    .chamada {
+        width: 100%;
+        display: block;
+        text-align: center;
+        color: white;
+        font-size: 2.1rem;
+        font-weight: bold;
+        margin: 0px;
+        margin-bottom: 20px;
+    }
 }
