--- a/NoFood/NoFood.Ionic/src/pages/produtos/produtos.scss
+++ b/NoFood/NoFood.Ionic/src/pages/produtos/produtos.scss
@@ -1,3 +1,78 @@
 page-produtos {
+    ion-content {
+        background: #F8F8F8 !important;
+    }
 
+    .topo {
+        position: fixed;
+        width: 100%;
+        height: 200px;
+        background: red;
+        background: linear-gradient(to bottom, rgba(255, 0, 0, 1) 0%, rgba(139, 0, 0, 1) 100%);
+    }
+
+    .titulo {
+        position: relative;
+        color: white;
+    }
+
+    .titulo p {
+        float: left;
+        font-size: 2rem;
+        font-weight: bold;
+        margin: 0px;
+        margin-left: 15px;
+        margin-top: 15px;
+    }
+
+    .titulo .cart {
+        float: right;
+        font-size: 1.7rem;
+        margin-right: 15px;
+        margin-top: 17px;
+    }
+
+    .produtos {
+        margin-top: 60px;
+    }
+    
+    .produto {
+        width: 80%;
+        background: white;
+        display: block;
+        position: relative;
+        margin: 0 auto;
+        margin-bottom: 15px;
+        border: 1px solid #E2DDDD;
+        box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
+        padding: 10px;
+    }
+
+    .produto .titulo {
+        color: red;
+        font-size: 1.6rem;
+        margin-bottom: 4px;
+    }
+
+    .produto .descricao {
+        height: 50px;
+    }
+
+    .produto .imagem {
+        float: left;
+        border: 1px solid #E2DDDD;
+        width: 80px;
+        height: 100px;
+        margin-right: 10px;
+        border-radius: 10px;
+    }
+
+    .produto .preco {
+        font-size: 2rem;
+    }
+
+    .produto .preco span {
+        font-weight: bold;
+        font-size: 1.3rem;
+    }
 }
