--- a/NoFood/NoFood.Ionic/src/app/app.scss
+++ b/NoFood/NoFood.Ionic/src/app/app.scss
@@ -49,3 +49,25 @@ ion-content.backImage {
 .list.list-transparent .item-input:last-child {
     border-bottom: none !important;
 }
+
+.topo {
+    position: fixed;
+    width: 100%;
+    height: 200px;
+    background: red;
+    background: linear-gradient(to bottom, rgba(255, 0, 0, 1) 0%, rgba(139, 0, 0, 1) 100%);
+}
+
+.titulo {
+    position: relative;
+    color: white;
+}
+
+.titulo p {
+    float: left;
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0px;
+    margin-left: 15px;
+    margin-top: 15px;
+}
